<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.trifork</groupId>
    <artifactId>deltazip-java</artifactId>
    <version>1.2rc1</version>
    <packaging>jar</packaging>

    <name>DeltaZip</name>
    <url>https://github.com/trifork/deltazip-java</url>
    <description>Zip adaptation for archiving</description>

    <distributionManagement>
      <snapshotRepository>
        <id>trifork.snapshots</id>
        <name>Trifork internal snapshot Nexus</name>
        <url>http://nexus.ci82.trifork.com/content/repositories/snapshots/</url>
      </snapshotRepository>
      <repository>
        <id>trifork.releases</id>
        <name>Trifork internal releases Nexus</name>
        <url>http://nexus.ci82.trifork.com/content/repositories/releases</url>
      </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

      <repositories>
        <repository>
          <id>Trifork-Nexus</id>
          <name>Trifork Nexus</name>
          <url>http://nexus.ci81.trifork.com/content/repositories/trifork-internal/</url>
          <layout>default</layout>
<!--           <snapshotPolicy>always</snapshotPolicy> -->
        </repository>
      </repositories>

    <dependencies>

	<dependency>
	  <groupId>junit</groupId>
	  <artifactId>junit</artifactId>
	  <version>4.8.2</version>
	  <scope>test</scope>
	</dependency>

	<dependency>
	  <groupId>com.jcraft</groupId>
	  <artifactId>jzlib</artifactId>
	  <version>1.0.7-eriksoe-1cb0120e</version>
	</dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <skip>${skip.tests}</skip>
                    <argLine>-Xms128m -Xmx256m -XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
                    <parallel>false</parallel>
                </configuration>
            </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.3.1</version>
        <configuration>
	  <archive>
	    <manifest>
              <addClasspath>true</addClasspath>
	      <packageName>com.trifork.deltazip</packageName>
	      <mainClass>com.trifork.deltazip.DeltaZipCLI</mainClass>
	    </manifest>
	  </archive>
        </configuration>
      </plugin>
        </plugins>

    </build>
</project>
